--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@alenaksu/json-viewer": "^2.0.1",
     "@angular/animations": "^17.1.0",
     "@angular/cdk": "^17.1.2",
     "@angular/common": "^17.1.0",
